# pc-monitor

./: .gitignore  CMakeLists.txt  README.md  main.js  package.json  pnpm-lock.yaml  preload.js  renderer.js
.claude/: CLAUDE.md  settings.local.json
.claude/commands/: build.md  dev.md  test.md
include/: data_logger.h  metrics_types.h  performance_monitor.h  power_monitor.h  thermal_monitor.h  web_interface.h
src/: data_logger.cpp  main.cpp  performance_monitor.cpp  power_monitor.cpp  thermal_monitor.cpp  web_interface.cpp
web/: dashboard.html
